# voxelGame

./: .gitignore  CMakeLists.txt  README.md
glad/src/: glad.c
include/glad/: glad.h
resources/models/blocks/: debug_block.json
resources/models/blocks/base/: voxel.json
resources/shaders/: shader_fragment.glsl  shader_vertex.glsl
src/: main.cpp
src/block/: block.cpp  block.h
src/blockRegistry/: blockRegistry.cpp  blockRegistry.h
src/blockSelectorBox/: blockSelectorBox.cpp  blockSelectorBox.h
src/camera/: camera.cpp  camera.h
src/chunk/: chunk.cpp  chunk.h
src/chunkData/: chunkData.cpp  chunkData.h
src/dda/: dda.cpp  dda.h
src/elementBuffer/: elementBuffer.cpp  elementBuffer.h
src/game/: game.cpp  game.h
src/glerror/: glerror.cpp  glerror.h
src/image/: image.cpp  image.h
src/imageAtlas/: imageAtlas.cpp  imageAtlas.h
src/level/: level.cpp  level.h
src/shader/: shader.cpp  shader.h
src/shaderProgram/: shaderProgram.cpp  shaderProgram.h
src/texture/: texture.cpp  texture.h
src/util/: util.cpp  util.h
src/vertexArray/: vertexArray.cpp  vertexArray.h
src/vertexAttribute/: vertexAttribute.cpp  vertexAttribute.h
src/vertexBuffer/: vertexBuffer.cpp  vertexBuffer.h
src/worldgen/: worldgen.cpp  worldgen.h
